Fixing spacing on CTHP overview. https://tracker.nci.nih.gov/browse/OCEPROJECT-2482

--- a/CancerGov/_src/StyleSheets/_cthp.scss
+++ b/CancerGov/_src/StyleSheets/_cthp.scss
@@ -35,6 +35,14 @@
 .cthp-body {
 	float: left; width: 55%;
 }
+.cthp-body h3 {
+	margin-top: 0px;
+}
+.large-12.columns.cthp-intro-multimedia.clearfix {
+	padding-top: 5px;
+	padding-bottom: 10px;
+	padding-left: 20px;
+}
 .cthp-content h1 {
   color: white;	
 }
